--- a/.github/workflows/master_mobilityscraperfunctionapp.yml
+++ b/.github/workflows/master_mobilityscraperfunctionapp.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "scraping" # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: "3.11" # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
@@ -28,7 +28,6 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          cd scraping
           python -m venv venv
           source venv/bin/activate
 
