store file in azure blob + multiple station_ids

--- a/scraping/requirements.txt
+++ b/scraping/requirements.txt
@@ -3,6 +3,8 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions==1.21.3
+azure-storage-blob==12.24.0
 pandas==2.2.3
 pytz==2024.2
 requests==2.32.3
+python-dotenv==1.0.1
