--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "azure-functions>=1.21.3",
     "azure-storage-blob>=12.24.0",
     "pandas>=2.2.3",
+    "python-dotenv>=1.0.1",
     "pytz>=2024.2",
     "requests>=2.32.3",
 ]
